[project]
name = "nhc_recon_parser"
version = "2.1.0"
description = "A Python application for STAC catalogs"
authors = [
    { name = "Zachary Davis", email = "zdavis@csumb.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pystac",
    "dotenv",
    "requests",
    "beautifulsoup4",
    "folium",
    "polars",
    "pandas",
    "pyarrow"
]

[project.urls]
Homepage = "https://github.com/CSUMB-NRL-STAC-Tools/nhc-recon-parser"
"Bug Tracker" = "https://github.com/CSUMB-NRL-STAC-Tools/nhc-recon-parser/issues"

[project.optional-dependencies]
dev = [
    "build",
    "sphinx",
    "furo",
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nhc_recon_parser"] # Find packages in the 'stac_catlog' directory
package-dir = {"" = "src"} # src layout support

[project.scripts]
parse-recon = "nhc_recon_parser.main:main"
pq-conv = "nhc_recon_parser.pq_conv:main"